results/SVCOMP/specgen/log-if_expr1-2024_02_27_04_37_34.txt
class if_expr1 {
    //@ ensures \result ==> x == 10 && y == 11;
    //@ ensures !\result ==> x != 10 && y == 9;
    public static boolean main(int x) {
        int y = x == 10 ? 11 : 9;
        if (x == 10) return y == 11;
        else return y == 9;
    }
}
/home/max/Documents/JMLGPT/tmp/if_expr1.java:2: error: cannot find symbol
    //@ ensures \result ==> x == 10 && y == 11;
                                       ^
  symbol:   variable y
  location: class if_expr1
/home/max/Documents/JMLGPT/tmp/if_expr1.java:3: error: cannot find symbol
    //@ ensures !\result ==> x != 10 && y == 9;
                                        ^
  symbol:   variable y
  location: class if_expr1
2 errors

class if_expr1 {
    //@ ensures \result ==> x == 10 && (x == 10 ? 11 : 9) == 11;
    //@ ensures !\result ==> x != 10 && (x == 10 ? 11 : 9) == 9;
    public static boolean main(int x) {
        int y = x == 10 ? 11 : 9;
        if (x == 10) return y == 11;
        else return y == 9;
    }
}
/home/max/Documents/JMLGPT/tmp/if_expr1.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/if_expr1.java:2:) in method main
        else return y == 9;
             ^
/home/max/Documents/JMLGPT/tmp/if_expr1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/if_expr1.java:7:
    //@ ensures \result ==> x == 10 && (x == 10 ? 11 : 9) == 11;
        ^
2 verification failures

class if_expr1 {
    //@ ensures \result ==> x == 10 && (x == 10 ? 11 : 9) == 11;  
    //@ ensures !\result ==> x != 10 && (x == 10 ? 11 : 9) == 9;
    public static boolean main(int x) {
        int y = x == 10 ? 11 : 9;
        if (x == 10) return y == 11;
        else return y == 9;
    }
}

/home/max/Documents/JMLGPT/tmp/if_expr1.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/if_expr1.java:2:) in method main
        else return y == 9;
             ^
/home/max/Documents/JMLGPT/tmp/if_expr1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/if_expr1.java:7:
    //@ ensures \result ==> x == 10 && (x == 10 ? 11 : 9) == 11;  
        ^
2 verification failures

class if_expr1 {
 
    //@ ensures !\result ==> x != 10 && (x == 10 ? 11 : 9) == 9;
    public static boolean main(int x) {
        int y = x == 10 ? 11 : 9;
        if (x == 10) return y == 11;
        else return y == 9;
    }
}


